[package]
name = "hyperliquid-toolset"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
hyperliquid_rust_sdk = "0.6"
ethers = "2"
uuid = "1"
chrono = "0.4"
comfy-table = "7.2"
ratatui = "0.30.0-alpha.5"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
futures-timer = "3"

[[bin]]
name = "hlt"
path = "src/cli.rs"
